feat: Implement ocean collision physics
Introduce a new physics simulation step to calculate ocean collision risk. This involves adding new parameters to `PhysicsParams` and updating the `GridCell` type to store collision mask information. The `climateEngine` is updated to include this new step and progress reporting. The UI components (`MapVisualizer`, `Controls`, and `App`) are also modified to support visualization and control of this new feature.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exoclim-branch-8:-planetary-climate-simulator",
+  "name": "exoclim-:-planetary-climate-simulator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
